--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background-color: #f4f4f4;
             text-align: center;
         }
         header {
-            background-color: #333;
+            background: linear-gradient(90deg, #333, #555);
             color: white;
             padding: 20px;
+            font-size: 1.5em;
+            text-transform: uppercase;
         }
         section {
-            margin: 20px;
+            margin: 20px auto;
             padding: 20px;
+            width: 80%;
             background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+        section:hover {
+            transform: scale(1.02);
         }
         ul {
             list-style-type: none;
@@ -32,11 +39,27 @@
             padding: 10px;
             border-bottom: 1px solid #ddd;
         }
+        li:last-child {
+            border-bottom: none;
+        }
         footer {
+            background: linear-gradient(90deg, #333, #555);
+            color: white;
+            padding: 15px;
+            margin-top: 20px;
+        }
+        button {
             background-color: #333;
             color: white;
-            padding: 10px;
-            margin-top: 20px;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background-color: #555;
         }
     </style>
 </head>
